--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "mapbox-gl": "^2.8.2",
     "stimulus": "^3.0.1",
+    "stimulus-carousel": "^4.0.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
